<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_margin="@dimen/activity_horizontal_margin"
    app:cardElevation="@dimen/margin8"
    app:contentPadding="@dimen/padding10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/channel_name"
            android:text="@string/name"/>

        <EditText
            android:id="@+id/channel_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin10"
            android:ems="30"
            android:inputType="text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/channel_description"
            android:text="@string/description"/>

        <EditText
            android:id="@+id/channel_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin10"
            android:ems="30"
            android:inputType="textImeMultiLine"
            android:lines="8"/>

        <Button
            android:id="@+id/create_channel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_channel"
            android:textColor="@android:color/white"
            style="@style/CustomButton"/>
    </LinearLayout>
</android.support.v7.widget.CardView>
