<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/activity_horizontal_margin"
        app:contentPadding="@dimen/padding10"
        app:cardElevation="@dimen/margin8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:labelFor="@+id/sign_up_username"/>
            <EditText
                android:id="@+id/sign_up_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginBottom="@dimen/margin10"
                android:ems="30"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:labelFor="@+id/sign_up_password"/>
            <EditText
                android:id="@+id/sign_up_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="30"
                android:layout_marginBottom="@dimen/margin10"/>

            <Button
                android:id="@+id/button_select_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_avatar"
                android:textColor="@android:color/white"/>
            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/avatar_image"
                android:layout_width="@dimen/margin30"
                android:layout_height="@dimen/margin30"
                android:layout_margin="@dimen/margin8"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                app:actualImageScaleType="fitCenter"
                android:background="?selectableItemBackgroundBorderless"/>
            <TextView
                android:id="@+id/asset_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
            <Button
                android:id="@+id/button_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@android:color/white"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>