<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_centerInParent="true"
        app:contentPadding="@dimen/padding10"
        app:cardElevation="@dimen/margin8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:labelFor="@+id/sign_up_username"/>
            <EditText
                android:id="@+id/log_in_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginBottom="@dimen/margin10"
                android:ems="30"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:labelFor="@+id/sign_up_password"/>
            <EditText
                android:id="@+id/log_in_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="30"
                android:layout_marginBottom="@dimen/margin10"/>
            <Button
                android:id="@+id/button_log_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:textColor="@android:color/white"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>