<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin10"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin6"
                android:labelFor="@+id/sign_up_username"
                android:text="@string/username"/>

            <TextView
                android:id="@+id/username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/textSize20"
                android:ems="30"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change"
                android:textColor="@android:color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/sign_up_password"
                android:text="@string/password"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin10"
                android:layout_weight="1"
                android:ems="30"
                android:inputType="textPassword"
                android:visibility="invisible"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change"
                android:textColor="@android:color/white"/>
        </LinearLayout>

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/avatar_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin8"
            android:layout_weight="1"
            android:background="?selectableItemBackgroundBorderless"
            android:paddingBottom="@dimen/padding14"
            android:paddingLeft="@dimen/padding28"
            android:paddingRight="@dimen/padding28"
            android:paddingTop="@dimen/padding28"
            android:scaleType="fitCenter"
            app:actualImageScaleType="fitCenter"/>

        <TextView
            android:id="@+id/asset_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/button_select_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/change"
            android:textColor="@android:color/white"/>
    </LinearLayout>
</RelativeLayout>